# qupulse-hdawg-legacy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
qupulse_hdawg_legacy/: __about__.py  __init__.py  seqc.py  zihdawg.py
tests/: __init__.py  seqc_test.py  seqc_tests.py  zihdaqwg_test.py
